--- a/mcachristmas/highschool.html
+++ b/mcachristmas/highschool.html
@@ -90,6 +90,7 @@
         list-style: decimal;
         list-style-position:inside;
         text-align: center;
+        margin-left:-36px;
     }
 
     .list {
