--- a/404.html
+++ b/404.html
@@ -25,14 +25,19 @@
 </html>
 <style>
     h1{
-        margin-left:20px;
+        margin-top:40px;
+        margin-left:40px;
         font-family:'IBM Plex Mono';
         color:white;
     }
     p{
-        margin-left:20px;
+        margin-left:40px;
         font-family:'IBM Plex Mono';
         color:white;
+    }
+    b {
+        font-family: 'IBM Plex Mono';
+        color: white;
     }
 </style>
 <script>
@@ -67,7 +72,7 @@
         "maybe it's on strike. Negotiate better browsing conditions.",
         "did you give it a cat video break?",
         "have you looked in the dark corners of the internet? Bring a flashlight- it's scary out there.",
-        "snacks may lure it back",
+        "snacks may lure it back...",
         "maybe it's in witness protection...",
         "did you try to bring it back? Abracadabra might do the trick.",
         "have you considered offering it a virtual map? It might be lost.",
