--- a/404.html
+++ b/404.html
@@ -17,13 +17,16 @@
             crossorigin="anonymous"></script>
 </head>
 
-<body style="background-color: #202020;">
+<body>
     <h1>404</h1>
     <p>Page not found... <b id="randomarea" style="font-weight:100"></b></p>
 </body>
 
 </html>
 <style>
+    * {
+        background-color: #202020;
+    }
     h1{
         margin-top:40px;
         margin-left:40px;
