--- a/404.html
+++ b/404.html
@@ -24,8 +24,11 @@
 
 </html>
 <style>
-    * {
+    body{
         background-color: #202020;
+        width:100%;
+        height:100%;
+        margin:0px;
     }
     h1{
         margin-top:40px;
