--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
         margin:0px;
     }
     h1{
-        margin-top:40px;
+        padding-top:40px;
         margin-left:40px;
         font-family:'IBM Plex Mono';
         color:white;
