--- a/404.html
+++ b/404.html
@@ -33,11 +33,13 @@
     h1{
         padding-top:40px;
         margin-left:40px;
+        margin-right:40px;
         font-family:'IBM Plex Mono';
         color:white;
     }
     p{
         margin-left:40px;
+        margin-right:40px;
         font-family:'IBM Plex Mono';
         color:white;
     }
