--- a/404.html
+++ b/404.html
@@ -85,7 +85,11 @@
         "did you try to bring it back? Abracadabra might do the trick.",
         "have you considered offering it a virtual map? It might be lost.",
         "did you try convincing it with a persuasive PowerPoint presentation?",
-        "maybe it's on a quest for the Holy Grail of web pages. It's a tough journey."
+        "maybe it's on a quest for the Holy Grail of web pages. It's a tough journey.",
+        "it knew too much...",
+        "that's probably no bueno.",
+        "who let the elves in the data center!?",
+        "oopsie..."
     ]
     const random = Math.floor(Math.random() * options.length);
     texttoreplace.innerHTML = options[random];
