--- a/404.html
+++ b/404.html
@@ -52,7 +52,7 @@
     texttoreplace = document.getElementById("randomarea");
     const options = [
         "have you checked under the virtual couch cushions?",
-        "have you emptied your pockets?",
+        "have you checked your left pocket?",
         "have you looked on top of your nightstand?",
         "have you checked at a different URL?",
         "have you retraced its steps?",
