--- a/404.html
+++ b/404.html
@@ -89,7 +89,13 @@
         "it knew too much...",
         "that's probably no bueno.",
         "who let the elves in the data center!?",
-        "oopsie..."
+        "oopsie...",
+        "it probably went to pursue a new career field.",
+        "well this is awkward...",
+        "it got too powerful.",
+        "maybe we can ressurect it if we try hard enough.",
+        "it's off to learn how to play the violin.",
+        "stay calm everyone it'll be ok- I hope."
     ]
     const random = Math.floor(Math.random() * options.length);
     texttoreplace.innerHTML = options[random];
