--- a/404.html
+++ b/404.html
@@ -18,9 +18,11 @@
 </head>
 
 <body>
-    <h1>404</h1>
-    <p>Page not found... <b id="randomarea" style="font-weight:100"></b></p>
-    <p id="addedcontext"><a id="addedcontextlink" target="_blank" rel="noopener noreferrer" href="mailto:contact@michaeldors.com?subject=Page%20Recently%20Removed%20Request%20|%20ADD%20URL"></a></p>
+    <div class="marginized">
+        <h1>404</h1>
+        <p>Page not found... <b id="randomarea" style="font-weight:100"></b></p>
+        <p id="addedcontext"><a id="addedcontextlink" target="_blank" rel="noopener noreferrer" href="mailto:contact@michaeldors.com?subject=Page%20Recently%20Removed%20Request%20|%20ADD%20URL"></a></p>
+    </div>
     <div id="bottombar">
         <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="mailto:contact@michaeldors.com?subject=404%20Inquiry%20For%20ADD_URL">Let Us Know</a>
     </div>
@@ -94,14 +96,14 @@
     }
     h1{
         padding-top:40px;
-        margin-left:40px;
-        margin-right:40px;
         color:white;
     }
     p{
+        color:white;
+    }
+    .marginized{
         margin-left:40px;
         margin-right:40px;
-        color:white;
     }
     b {
         color: white;
