--- a/404.html
+++ b/404.html
@@ -16,9 +16,11 @@
 </head>
 
 <body>
-    <h1>404</h1>
-    <p>Page not found... <b id="randomarea" style="font-weight:100"></b></p>
-    <p id="addedcontext"><a id="addedcontextlink" target="_blank" rel="noopener noreferrer" href="mailto:contact@michaeldors.com?subject=Page%20Recently%20Removed%20Request%20|%20ADD%20URL"></a></p>
+    <div class="toparea">
+        <h1>404</h1>
+        <p>Page not found... <b id="randomarea" style="font-weight:100"></b></p>
+        <p id="addedcontext"><a id="addedcontextlink" target="_blank" rel="noopener noreferrer" href="mailto:contact@michaeldors.com?subject=Page%20Recently%20Removed%20Request%20|%20ADD%20URL"></a></p>
+    </div>
     <div id="bottombar">
         <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="mailto:contact@michaeldors.com?subject=404%20Inquiry%20For%20ADD_URL">Let Us Know</a>
     </div>
@@ -81,6 +83,8 @@
         background-size:cover;
         background-repeat:no-repeat;
         background-position: bottom center;
+    }
+    .toparea{
         z-index:100000;
     }
     body{
